--- a/HR_diagram.ipynb
+++ b/HR_diagram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -18659,8 +18659,11 @@
    ],
    "source": [
     "import h5py\n",
+    "import matplotlib as plt\n",
+    "import numpy as np\n",
+    "file_path = 'C:\\\\Users\\\\Dell\\\\Downloads\\\\Garstec_AS09_chiara.hdf5'\n",
     "# Open the HDF5 file in read mode\n",
-    "with h5py.File('C:\\\\Users\\\\Dell\\\\Downloads\\\\Garstec_AS09_chiara.hdf5', 'r') as file:\n",
+    "with h5py.File(file_path, 'r') as file:\n",
     "    # Access the 'grid' group and then the 'tracks' group within it\n",
     "    if 'grid' in file:\n",
     "        grid_group = file['grid']\n",
@@ -18691,7 +18694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19317,9 +19320,8 @@
     }
    ],
    "source": [
-    "import h5py\n",
     "\n",
-    "with h5py.File('C:\\\\Users\\\\Dell\\\\Downloads\\\\Garstec_AS09_chiara.hdf5', 'r') as file:\n",
+    "with h5py.File(file_path, 'r') as file:\n",
     "    tracks_group = file['grid/tracks']\n",
     "    \n",
     "    # Manually check a few specific tracks\n",
@@ -19338,7 +19340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19352,16 +19354,12 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "file_path = 'C:\\\\Users\\\\Dell\\\\Downloads\\\\Garstec_AS09_chiara.hdf5'\n",
-    "\n",
     "with h5py.File(file_path, 'r') as f:\n",
-    "    # Access the datasets for temperature and luminosity in the specified group\n",
+    "    \n",
     "    Teff = f['grid/tracks/track00001/Teff'][:]     # Effective Temperature array\n",
     "    LPhot = f['grid/tracks/track00001/LPhot'][:]   # Photospheric Luminosity array\n",
     "\n",
-    "LPhot = LPhot * 3.828 * 10**26\n",
+    "LPhot = LPhot * 3.828 * 10**26  # Converting into watts\n",
     "print(\"Teff:\", Teff[:5])  # Print the first few values\n",
     "print(\"LPhot:\", LPhot[:5])\n",
     "\n",
@@ -19370,14 +19368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_5784\\409740083.py:2: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_17028\\409740083.py:2: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  plt.scatter(Teff, LPhot, cmap='inferno', s=1)\n"
      ]
     },
@@ -19402,6 +19400,61 @@
     "plt.gca().invert_xaxis()  # Invert x-axis for HR diagram convention\n",
     "plt.title(\"HR Diagram (Teff vs Luminosity)\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"Unable to open object (object 'track00001' doesn't exist)\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# List all items in 'tracks' group\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m item_name \u001b[38;5;129;01min\u001b[39;00m tracks_group:\n\u001b[1;32m---> 15\u001b[0m     item \u001b[38;5;241m=\u001b[39m f[item_name]\n\u001b[0;32m     17\u001b[0m     Teff \u001b[38;5;241m=\u001b[39m item[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTeff\u001b[39m\u001b[38;5;124m'\u001b[39m][:]\n\u001b[0;32m     18\u001b[0m     LPhot \u001b[38;5;241m=\u001b[39m item[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLPhot\u001b[39m\u001b[38;5;124m'\u001b[39m][:]\n",
+      "File \u001b[1;32mh5py\\_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mh5py\\_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\Lib\\site-packages\\h5py\\_hl\\group.py:328\u001b[0m, in \u001b[0;36mGroup.__getitem__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    326\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid HDF5 object reference\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    327\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(name, (\u001b[38;5;28mbytes\u001b[39m, \u001b[38;5;28mstr\u001b[39m)):\n\u001b[1;32m--> 328\u001b[0m     oid \u001b[38;5;241m=\u001b[39m h5o\u001b[38;5;241m.\u001b[39mopen(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_e(name), lapl\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_lapl)\n\u001b[0;32m    329\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    330\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccessing a group is done with bytes or str, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    331\u001b[0m                     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m not \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mtype\u001b[39m(name)))\n",
+      "File \u001b[1;32mh5py\\_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mh5py\\_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mh5py\\h5o.pyx:190\u001b[0m, in \u001b[0;36mh5py.h5o.open\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"Unable to open object (object 'track00001' doesn't exist)\""
+     ]
+    }
+   ],
+   "source": [
+    "all_Teff = []\n",
+    "all_LPhot = []\n",
+    "\n",
+    "# Open the HDF5 file and iterate over each group (track)\n",
+    "with h5py.File(file_path, 'r') as f:\n",
+    "    if 'grid' in f:\n",
+    "        grid_group = f['grid']\n",
+    "        \n",
+    "        # Check if 'tracks' exists within 'grid'\n",
+    "        if 'tracks' in grid_group:\n",
+    "            tracks_group = grid_group['tracks']\n",
+    "            \n",
+    "            # List all items in 'tracks' group\n",
+    "            for item_name in tracks_group:\n",
+    "                item = f[item_name]\n",
+    "\n",
+    "                Teff = item['Teff'][:]\n",
+    "                LPhot = item['LPhot'][:]\n",
+    "\n",
+    "                all_Teff.append(Teff)\n",
+    "                all_LPhot.append(LPhot)\n",
+    "\n",
+    "        else:\n",
+    "            print(\"'tracks' group not found within 'grid'\")\n",
+    "    else:\n",
+    "        print(\"'grid' group not found in the file.\")\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
