added the constraints on FeHini, Yini, eta and alpheFe

--- a/HR_diagram.ipynb
+++ b/HR_diagram.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -177,6 +177,13 @@
      "output_type": "stream",
      "text": [
       "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
      ]
     },
     {
@@ -221,11 +228,35 @@
     "        else:\n",
     "            alphaMLT_value = 0  # Put outside of our desired range so it isn't selected\n",
     "\n",
-    "        #if 'FeHini'\n",
+    "        if 'FeHini' in track and track['FeHini'].size > 0:\n",
+    "            FeHini_value = track['FeHini'][()][0]  # Get the first element if it exists\n",
+    "        else:\n",
+    "            FeHini_value = 0  # Put outside of our desired range so it isn't selected\n",
     "\n",
-    "        if (1.0 < massini_value < 1.1) and (1.785 < alphaMLT_value < 1.795):  \n",
+    "        if 'alphaFe' in track and track['alphaFe'].size > 0:\n",
+    "            alphaFe_value = track['alphaFe'][()][0]  # Get the first element if it exists\n",
+    "        else:\n",
+    "            alphaFe_value = 0  # Put outside of our desired range so it isn't selected\n",
+    "\n",
+    "        if 'yini' in track and track['yini'].size > 0:\n",
+    "            yini_value = track['yini'][()][0]  # Get the first element if it exists\n",
+    "        else:\n",
+    "            yini_value = 0  # Put outside of our desired range so it isn't selected\n",
+    "\n",
+    "        if 'eta' in track and track['eta'].size > 0:\n",
+    "            eta_value = track['eta'][()][0]  # Get the first element if it exists\n",
+    "        else:\n",
+    "            eta_value = 0  # Put outside of our desired range so it isn't selected\n",
+    "\n",
+    "# If graveyard: 0 < FeHini_value < 0.1, 0 < alphaFe_value < 0.01, 0.26 < yini_value < 0.265, 0 < eta_value < 0.05\n",
+    "\n",
+    "        if all([\n",
+    "            1.0 < massini_value < 1.1,\n",
+    "            1.785 < alphaMLT_value < 1.795\n",
+    "        ]):  \n",
     "            selected_tracks.append(track)\n",
     "            \n",
+    "    print(len(selected_tracks)) # checking how many tracks are within requirements \n",
     "\n",
     "    # Now for the fun bit, plot the HR diagrams for each of the selected tracks\n",
     "\n",
