V2 model, 7 inputs, 1000 tracks, 6000 epochs. R^2: 0.9841

--- a/dev/GarstecModel_V2/GarstecNN_V2.ipynb
+++ b/dev/GarstecModel_V2/GarstecNN_V2.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
     "# Convert to PyTorch tensor\n",
     "all_features_tensor = torch.FloatTensor(all_features_scaled)\n",
     "\n",
-    "# Make predictions for this track\n",
+    "# Make predictions for the track\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
     "    predictions_specific = model(all_features_tensor).numpy()\n",
