Changed which inputs are/n't log10 scale, changed batch size, added checkpoint loop for saving best epoch,

--- a/dev/GarstecModel_V4/GarstecNN_V4.ipynb
+++ b/dev/GarstecModel_V4/GarstecNN_V4.ipynb
@@ -10,6 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "import h5py\n",
     "import random\n",
+    "import os\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +34,8 @@
       "PyTorch version: 2.5.1+cu118\n",
       "CUDA available: True\n",
       "Device name: NVIDIA GeForce GTX 1650 Ti\n",
-      "cuda\n"
+      "cuda\n",
+      "Number of cores:  12\n"
      ]
     }
    ],
@@ -45,12 +47,15 @@
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "print(device)"
+    "print(device)\n",
+    "\n",
+    "num_cores = os.cpu_count()\n",
+    "print(\"Number of cores: \",num_cores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,29 +123,32 @@
     "epsilon = 1e-10\n",
     "\n",
     "# Features requiring log10 transformation\n",
-    "log10_vars_inputs = [ages, massini, alphamlt, eta, alphafe]\n",
+    "log10_vars_inputs = [ages, massini, alphamlt, eta, yini]\n",
     "\n",
     "# Transform log10 variables\n",
     "log10_transformed_inputs = [np.log10(np.maximum(np.concatenate(var).reshape(-1, 1), epsilon)) for var in log10_vars_inputs]\n",
     "\n",
     "# Concatenate all inputs, including raw `fehini` and `yini`\n",
-    "inputs = np.hstack(log10_transformed_inputs + [np.concatenate(fehini).reshape(-1, 1), np.concatenate(yini).reshape(-1, 1)])\n",
+    "inputs = np.hstack(log10_transformed_inputs + [np.concatenate(fehini).reshape(-1, 1), \n",
+    "                                               np.concatenate(alphafe).reshape(-1, 1)])\n",
     "\n",
     "# Features requiring log10 transformation (strictly positive outputs)\n",
-    "log10_vars_outputs = [teff, luminosity, dnufit, G_GAIA, massfin, numax]\n",
+    "log10_vars_outputs = [teff, luminosity, dnufit, massfin, numax]\n",
     "\n",
     "# Transform log10 variables\n",
     "log10_transformed_outputs = [np.log10(np.maximum(np.concatenate(var).reshape(-1, 1), epsilon)) for var in log10_vars_outputs]\n",
     "\n",
     "# Combine transformed log10 outputs with raw FeH and MeH\n",
     "# FeH and MeH are not transformed, concatenated directly\n",
-    "outputs = np.hstack(log10_transformed_outputs + [np.concatenate(FeH).reshape(-1, 1), np.concatenate(MeH).reshape(-1, 1)])\n",
+    "outputs = np.hstack(log10_transformed_outputs + [np.concatenate(FeH).reshape(-1, 1), \n",
+    "                                                 np.concatenate(MeH).reshape(-1, 1),\n",
+    "                                                 np.concatenate(G_GAIA).reshape(-1, 1)])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -173,13 +181,15 @@
     "y_train_tensor = torch.tensor(y_train, dtype=torch.float32).to(device)\n",
     "y_test_tensor = torch.tensor(y_test, dtype=torch.float32).to(device)\n",
     "\n",
+    "num_cores = os.cpu_count()\n",
+    "\n",
     "dataset = TensorDataset(X_train_tensor, y_train_tensor)\n",
-    "dataloader = DataLoader(dataset, batch_size=128, shuffle=True, num_workers=6)  \n"
+    "dataloader = DataLoader(dataset, batch_size=2**14, shuffle=True, num_workers=num_cores)  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,23 +198,23 @@
     "    def __init__(self):\n",
     "        super(GarstecNet, self).__init__()\n",
     "        self.dense1 = nn.Linear(7, 64)   # Input layer\n",
-    "        #self.dense2 = nn.Linear(64, 64)\n",
-    "        #self.dense3 = nn.Linear(64, 64)  \n",
-    "        #self.dense4 = nn.Linear(64, 64)\n",
+    "        self.dense2 = nn.Linear(64, 64)\n",
+    "        self.dense3 = nn.Linear(64, 64)  \n",
+    "        self.dense4 = nn.Linear(64, 64)\n",
     "        self.dense5 = nn.Linear(64, 64)\n",
     "        self.dense6 = nn.Linear(64, 8)    # Output layer\n",
     "        \n",
     "\n",
     "    def forward(self, x):\n",
     "        x = torch.relu(self.dense1(x))\n",
-    "        #x = torch.relu(self.dense2(x))\n",
-    "        #x = torch.relu(self.dense3(x))  \n",
-    "        #x = torch.relu(self.dense4(x))\n",
+    "        x = torch.relu(self.dense2(x))\n",
+    "        x = torch.relu(self.dense3(x))  \n",
+    "        x = torch.relu(self.dense4(x))\n",
     "        x = torch.relu(self.dense5(x))\n",
     "        x = self.dense6(x)\n",
     "        return x\n",
     "\n",
-    "    \n",
+    "\n",
     "# Instantiate model, loss function, and optimizer\n",
     "model = GarstecNet().to(device)\n",
     "criterion = nn.MSELoss()\n",
@@ -213,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -234,6 +244,11 @@
     "test_losses = []\n",
     "\n",
     "epochs = 5\n",
+    "best_test_loss = float('inf')  # Initialize with infinity, so any loss will be better initially\n",
+    "best_model_wts = None  # Variable to store the best model's weights\n",
+    "\n",
+    "save_dir = r'C:\\Users\\kiena\\Python Project\\Year4Project\\dev\\GarstecModel_V4'\n",
+    "os.makedirs(save_dir, exist_ok=True)  # Create directory if it doesn't exist\n",
     "\n",
     "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=250, gamma=0.85)\n",
     "\n",
@@ -272,6 +287,12 @@
     "        epoch_test_loss = criterion(test_predictions, y_test_tensor).item()     # Compute loss\n",
     "        test_losses.append(epoch_test_loss)      # Store test loss\n",
     "    \n",
+    "\n",
+    "    # Check if the current test loss is the best (lowest)\n",
+    "    if epoch_test_loss < best_test_loss:\n",
+    "        best_test_loss = epoch_test_loss\n",
+    "        best_model_wts = model.state_dict()  # Save the best model's weights\n",
+    "\n",
     "    # Step the scheduler\n",
     "    scheduler.step()\n",
     "\n",
@@ -279,33 +300,19 @@
     "    if (epoch+1) % 1 == 0:\n",
     "        print(f\"Epoch {epoch+1}/{epochs}, Train Loss: {epoch_train_loss:.4f}, Test Loss: {epoch_test_loss:.4f}, LR: {scheduler.get_last_lr()[0]:.6f}\")\n",
     "\n",
-    "# Training complete\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model, optimizer, and entire model saved successfully.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Save the model's state dictionary\n",
-    "torch.save(model.state_dict(), 'garstec_model_V3_state.pth')\n",
+    "# Training complete\n",
+    "# Save the overall best model at the end of the training loop (after all epochs)\n",
+    "if best_model_wts is not None:\n",
+    "    # Save the best model's weights and optimizer state at the end of training\n",
+    "    torch.save({\n",
+    "        'epoch': epochs,  # You can also store the final epoch number\n",
+    "        'model_state_dict': best_model_wts,\n",
+    "        'optimizer_state_dict': optimizer.state_dict(),\n",
+    "        'scheduler_state_dict': scheduler.state_dict(),\n",
+    "        'loss': best_test_loss,\n",
+    "    }, os.path.join(save_dir, 'best_model.pth'))  # Save model checkpoint\n",
     "\n",
-    "# Save the optimizer's state dictionary\n",
-    "torch.save(optimizer.state_dict(), 'garstec_V3_optimizer_state.pth')\n",
-    "\n",
-    "# Save the entire model\n",
-    "torch.save(model, 'garstec_entire_model_V3.pth')\n",
-    "\n",
-    "print(\"Model, optimizer, and entire model saved successfully.\")"
+    "    print(f\"Best model saved to {os.path.join(save_dir, 'best_model.pth')}\")\n"
    ]
   },
   {
