--- a/dev/GarstecModel_V3/GarstecNN_V3.ipynb
+++ b/dev/GarstecModel_V3/GarstecNN_V3.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length tracks:  9322\n"
+     ]
+    }
+   ],
    "source": [
     "garstec_data = r'C:\\Users\\kiena\\Documents\\YEAR 4\\PROJECT\\Data\\Garstec_AS09_chiara.hdf5'\n",
     "\n",
@@ -53,7 +61,7 @@
     "\n",
     "    grid = hdf['grid']\n",
     "    tracks = grid['tracks']\n",
-    "\n",
+    "    print(\"length tracks: \", len(tracks))\n",
     "    # Get a list of track names and shuffle for random sampling\n",
     "    track_names = list(tracks.keys())\n",
     "    random.seed(1)\n",
