Changes for running on BlueBEAR

--- a/dev/GarstecModel_V4/GarstecNN_V4.ipynb
+++ b/dev/GarstecModel_V4/GarstecNN_V4.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
       "PyTorch version: 2.5.1+cu118\n",
       "CUDA available: True\n",
       "Device name: NVIDIA GeForce GTX 1650 Ti\n",
-      "cuda\n",
+      "Device:  cuda\n",
       "Number of cores:  12\n"
      ]
     }
@@ -47,7 +47,7 @@
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "print(device)\n",
+    "print(\"Device: \",device)\n",
     "\n",
     "num_cores = os.cpu_count()\n",
     "print(\"Number of cores: \",num_cores)"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -181,15 +181,13 @@
     "y_train_tensor = torch.tensor(y_train, dtype=torch.float32).to(device)\n",
     "y_test_tensor = torch.tensor(y_test, dtype=torch.float32).to(device)\n",
     "\n",
-    "num_cores = os.cpu_count()\n",
-    "\n",
     "dataset = TensorDataset(X_train_tensor, y_train_tensor)\n",
-    "dataloader = DataLoader(dataset, batch_size=2**14, shuffle=True, num_workers=num_cores)  \n"
+    "dataloader = DataLoader(dataset, batch_size=2**14, shuffle=True)  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,11 +228,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Train Loss: 0.0000, Test Loss: 1.0041, LR: 0.010000\n",
-      "Epoch 2/5, Train Loss: 0.0000, Test Loss: 1.0041, LR: 0.010000\n",
-      "Epoch 3/5, Train Loss: 0.0000, Test Loss: 1.0041, LR: 0.010000\n",
-      "Epoch 4/5, Train Loss: 0.0000, Test Loss: 1.0041, LR: 0.010000\n",
-      "Epoch 5/5, Train Loss: 0.0000, Test Loss: 1.0041, LR: 0.010000\n"
+      "Epoch 1/5, Train Loss: 0.4978, Test Loss: 0.4896, LR: 0.010000\n",
+      "Epoch 2/5, Train Loss: 0.5051, Test Loss: 0.4944, LR: 0.010000\n",
+      "Epoch 3/5, Train Loss: 0.4898, Test Loss: 0.4993, LR: 0.010000\n",
+      "Epoch 4/5, Train Loss: 0.5192, Test Loss: 0.5041, LR: 0.010000\n",
+      "Epoch 5/5, Train Loss: 0.5031, Test Loss: 0.4982, LR: 0.010000\n",
+      "Best model saved to C:\\Users\\kiena\\Python Project\\Year4Project\\dev\\GarstecModel_V4\\best_model.pth, epoch: 0, test loss: 0.4895944595336914\n"
      ]
     }
    ],
@@ -246,6 +245,7 @@
     "epochs = 5\n",
     "best_test_loss = float('inf')  # Initialize with infinity, so any loss will be better initially\n",
     "best_model_wts = None  # Variable to store the best model's weights\n",
+    "best_epoch = -1 # Variable to store epoch of best model\n",
     "\n",
     "save_dir = r'C:\\Users\\kiena\\Python Project\\Year4Project\\dev\\GarstecModel_V4'\n",
     "os.makedirs(save_dir, exist_ok=True)  # Create directory if it doesn't exist\n",
@@ -292,6 +292,7 @@
     "    if epoch_test_loss < best_test_loss:\n",
     "        best_test_loss = epoch_test_loss\n",
     "        best_model_wts = model.state_dict()  # Save the best model's weights\n",
+    "        best_epoch = epoch + 1\n",
     "\n",
     "    # Step the scheduler\n",
     "    scheduler.step()\n",
@@ -305,14 +306,14 @@
     "if best_model_wts is not None:\n",
     "    # Save the best model's weights and optimizer state at the end of training\n",
     "    torch.save({\n",
-    "        'epoch': epochs,  # You can also store the final epoch number\n",
+    "        'epoch': epochs,  \n",
     "        'model_state_dict': best_model_wts,\n",
     "        'optimizer_state_dict': optimizer.state_dict(),\n",
     "        'scheduler_state_dict': scheduler.state_dict(),\n",
     "        'loss': best_test_loss,\n",
     "    }, os.path.join(save_dir, 'best_model.pth'))  # Save model checkpoint\n",
     "\n",
-    "    print(f\"Best model saved to {os.path.join(save_dir, 'best_model.pth')}\")\n"
+    "    print(f\"Best model saved to {os.path.join(save_dir, 'best_model.pth')}, epoch: {best_epoch}, test loss: {best_test_loss}\")\n"
    ]
   },
   {
