same error despite changing x to numpy array

--- a/HBM stuff/EMU_test_1star.ipynb
+++ b/HBM stuff/EMU_test_1star.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_27372\\3765155684.py:25: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_6752\\3765155684.py:25: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model.load_state_dict(torch.load('garstec_model_V3_state.pth'))\n"
      ]
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,8 @@
     "\n",
     "def emulate_with_pytorch(x, model, scaler_X, scaler_y):\n",
     "    # Normalize inputs\n",
-    "    x_scaled = scaler_X.transform(x)  # Apply input scaling\n",
+    "    #x = np.array(x)\n",
+    "    x_scaled = scaler_X.transform(jax.device_get(x))  # Apply input scaling\n",
     "\n",
     "    # Convert to PyTorch tensor\n",
     "    x_tensor = torch.FloatTensor(x_scaled)\n",
@@ -342,14 +343,14 @@
     "    y_specific = scaler_y.inverse_transform(y_specific)\n",
     "\n",
     "    # Convert to JAX array\n",
-    "    #y = jax.device_get(y_specific)  # JAX-safe conversion from NumPy to JAX array\n",
+    "    y = jax.device_get(y_specific)  # JAX-safe conversion from NumPy to JAX array\n",
     "    return y_specific \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,14 +458,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_27372\\1851821253.py:7: UserWarning: There are not enough devices to run parallel chains: expected 4 but got 1. Chains will be drawn sequentially. If you are running MCMC in CPU, consider using `numpyro.set_host_device_count(4)` at the beginning of your program. You can double-check how many devices are available in your system using `jax.local_device_count()`.\n",
+      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_6752\\1851821253.py:7: UserWarning: There are not enough devices to run parallel chains: expected 4 but got 1. Chains will be drawn sequentially. If you are running MCMC in CPU, consider using `numpyro.set_host_device_count(4)` at the beginning of your program. You can double-check how many devices are available in your system using `jax.local_device_count()`.\n",
       "  mcmc = MCMC(nuts, num_warmup=2000, num_samples=2000, num_chains=4)\n"
      ]
     },
@@ -483,7 +484,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTracerArrayConversionError\u001b[0m                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[268], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m rng \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mPRNGKey(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m      9\u001b[0m rng, key \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39msplit(rng)\n\u001b[1;32m---> 11\u001b[0m mcmc\u001b[38;5;241m.\u001b[39mrun(key, obs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[12], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m rng \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mPRNGKey(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m      9\u001b[0m rng, key \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39msplit(rng)\n\u001b[1;32m---> 11\u001b[0m mcmc\u001b[38;5;241m.\u001b[39mrun(key, obs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
       "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\Lib\\site-packages\\numpyro\\infer\\mcmc.py:706\u001b[0m, in \u001b[0;36mMCMC.run\u001b[1;34m(self, rng_key, extra_fields, init_params, *args, **kwargs)\u001b[0m\n\u001b[0;32m    704\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    705\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchain_method \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msequential\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m--> 706\u001b[0m         states, last_state \u001b[38;5;241m=\u001b[39m _laxmap(partial_map_fn, map_args)\n\u001b[0;32m    707\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchain_method \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparallel\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    708\u001b[0m         states, last_state \u001b[38;5;241m=\u001b[39m pmap(partial_map_fn)(map_args)\n",
       "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\Lib\\site-packages\\numpyro\\infer\\mcmc.py:177\u001b[0m, in \u001b[0;36m_laxmap\u001b[1;34m(f, xs)\u001b[0m\n\u001b[0;32m    175\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[0;32m    176\u001b[0m     x \u001b[38;5;241m=\u001b[39m jit(_get_value_from_index)(xs, i)\n\u001b[1;32m--> 177\u001b[0m     ys\u001b[38;5;241m.\u001b[39mappend(f(x))\n\u001b[0;32m    179\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m jax\u001b[38;5;241m.\u001b[39mtree\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39margs: jnp\u001b[38;5;241m.\u001b[39mstack(args), \u001b[38;5;241m*\u001b[39mys)\n",
       "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\Lib\\site-packages\\numpyro\\infer\\mcmc.py:465\u001b[0m, in \u001b[0;36mMCMC._single_chain_mcmc\u001b[1;34m(self, init, args, kwargs, collect_fields, remove_sites)\u001b[0m\n\u001b[0;32m    463\u001b[0m \u001b[38;5;66;03m# Check if _sample_fn is None, then we need to initialize the sampler.\u001b[39;00m\n\u001b[0;32m    464\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m init_state \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m (\u001b[38;5;28mgetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msampler, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_sample_fn\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m--> 465\u001b[0m     new_init_state \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msampler\u001b[38;5;241m.\u001b[39minit(\n\u001b[0;32m    466\u001b[0m         rng_key,\n\u001b[0;32m    467\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_warmup,\n\u001b[0;32m    468\u001b[0m         init_params,\n\u001b[0;32m    469\u001b[0m         model_args\u001b[38;5;241m=\u001b[39margs,\n\u001b[0;32m    470\u001b[0m         model_kwargs\u001b[38;5;241m=\u001b[39mkwargs,\n\u001b[0;32m    471\u001b[0m     )\n\u001b[0;32m    472\u001b[0m     init_state \u001b[38;5;241m=\u001b[39m new_init_state \u001b[38;5;28;01mif\u001b[39;00m init_state \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m init_state\n\u001b[0;32m    473\u001b[0m sample_fn, postprocess_fn \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_cached_fns()\n",
@@ -501,8 +502,8 @@
       "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\Lib\\site-packages\\numpyro\\primitives.py:105\u001b[0m, in \u001b[0;36mMessenger.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    103\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n\u001b[0;32m    104\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m:\n\u001b[1;32m--> 105\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
       "    \u001b[1;31m[... skipping similar frames: Messenger.__call__ at line 105 (3 times)]\u001b[0m\n",
       "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\Lib\\site-packages\\numpyro\\primitives.py:105\u001b[0m, in \u001b[0;36mMessenger.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    103\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n\u001b[0;32m    104\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m:\n\u001b[1;32m--> 105\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "Cell \u001b[1;32mIn[265], line 22\u001b[0m, in \u001b[0;36mBmodel\u001b[1;34m(obs)\u001b[0m\n\u001b[0;32m     18\u001b[0m x \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m7\u001b[39m)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# Emulate using PyTorch model\u001b[39;00m\n\u001b[1;32m---> 22\u001b[0m y_scaled \u001b[38;5;241m=\u001b[39m emulate_with_pytorch(x, model, scaler_X, scaler_y) \u001b[38;5;66;03m# , model, scaler_X, scaler_y\u001b[39;00m\n\u001b[0;32m     24\u001b[0m mean_y \u001b[38;5;241m=\u001b[39m jnp\u001b[38;5;241m.\u001b[39marray(scaler_y\u001b[38;5;241m.\u001b[39mmean_)  \n\u001b[0;32m     25\u001b[0m std_y \u001b[38;5;241m=\u001b[39m jnp\u001b[38;5;241m.\u001b[39marray(scaler_y\u001b[38;5;241m.\u001b[39mscale_)\n",
-      "Cell \u001b[1;32mIn[267], line 7\u001b[0m, in \u001b[0;36memulate_with_pytorch\u001b[1;34m(x, model, scaler_X, scaler_y)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21memulate_with_pytorch\u001b[39m(x, model, scaler_X, scaler_y):\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;66;03m# Normalize inputs\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m     x_scaled \u001b[38;5;241m=\u001b[39m scaler_X\u001b[38;5;241m.\u001b[39mtransform(x)  \u001b[38;5;66;03m# Apply input scaling\u001b[39;00m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;66;03m# Convert to PyTorch tensor\u001b[39;00m\n\u001b[0;32m     10\u001b[0m     x_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mFloatTensor(x_scaled)\n",
+      "Cell \u001b[1;32mIn[11], line 22\u001b[0m, in \u001b[0;36mBmodel\u001b[1;34m(obs)\u001b[0m\n\u001b[0;32m     18\u001b[0m x \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m7\u001b[39m)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# Emulate using PyTorch model\u001b[39;00m\n\u001b[1;32m---> 22\u001b[0m y_scaled \u001b[38;5;241m=\u001b[39m emulate_with_pytorch(x, model, scaler_X, scaler_y) \u001b[38;5;66;03m# , model, scaler_X, scaler_y\u001b[39;00m\n\u001b[0;32m     24\u001b[0m mean_y \u001b[38;5;241m=\u001b[39m jnp\u001b[38;5;241m.\u001b[39marray(scaler_y\u001b[38;5;241m.\u001b[39mmean_)  \n\u001b[0;32m     25\u001b[0m std_y \u001b[38;5;241m=\u001b[39m jnp\u001b[38;5;241m.\u001b[39marray(scaler_y\u001b[38;5;241m.\u001b[39mscale_)\n",
+      "Cell \u001b[1;32mIn[8], line 8\u001b[0m, in \u001b[0;36memulate_with_pytorch\u001b[1;34m(x, model, scaler_X, scaler_y)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21memulate_with_pytorch\u001b[39m(x, model, scaler_X, scaler_y):\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;66;03m# Normalize inputs\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;66;03m#x = np.array(x)\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m     x_scaled \u001b[38;5;241m=\u001b[39m scaler_X\u001b[38;5;241m.\u001b[39mtransform(jax\u001b[38;5;241m.\u001b[39mdevice_get(x))  \u001b[38;5;66;03m# Apply input scaling\u001b[39;00m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;66;03m# Convert to PyTorch tensor\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     x_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mFloatTensor(x_scaled)\n",
       "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_set_output.py:140\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[1;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[0;32m    138\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(f)\n\u001b[0;32m    139\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapped\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m--> 140\u001b[0m     data_to_wrap \u001b[38;5;241m=\u001b[39m f(\u001b[38;5;28mself\u001b[39m, X, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    141\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data_to_wrap, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m    142\u001b[0m         \u001b[38;5;66;03m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[0;32m    143\u001b[0m         return_tuple \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    144\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[38;5;241m0\u001b[39m], X, \u001b[38;5;28mself\u001b[39m),\n\u001b[0;32m    145\u001b[0m             \u001b[38;5;241m*\u001b[39mdata_to_wrap[\u001b[38;5;241m1\u001b[39m:],\n\u001b[0;32m    146\u001b[0m         )\n",
       "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:1004\u001b[0m, in \u001b[0;36mStandardScaler.transform\u001b[1;34m(self, X, copy)\u001b[0m\n\u001b[0;32m   1001\u001b[0m check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[0;32m   1003\u001b[0m copy \u001b[38;5;241m=\u001b[39m copy \u001b[38;5;28;01mif\u001b[39;00m copy \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcopy\n\u001b[1;32m-> 1004\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_data(\n\u001b[0;32m   1005\u001b[0m     X,\n\u001b[0;32m   1006\u001b[0m     reset\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m   1007\u001b[0m     accept_sparse\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsr\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   1008\u001b[0m     copy\u001b[38;5;241m=\u001b[39mcopy,\n\u001b[0;32m   1009\u001b[0m     dtype\u001b[38;5;241m=\u001b[39mFLOAT_DTYPES,\n\u001b[0;32m   1010\u001b[0m     force_all_finite\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mallow-nan\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   1011\u001b[0m )\n\u001b[0;32m   1013\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m sparse\u001b[38;5;241m.\u001b[39missparse(X):\n\u001b[0;32m   1014\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwith_mean:\n",
       "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:604\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, cast_to_ndarray, **check_params)\u001b[0m\n\u001b[0;32m    602\u001b[0m         out \u001b[38;5;241m=\u001b[39m X, y\n\u001b[0;32m    603\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m no_val_y:\n\u001b[1;32m--> 604\u001b[0m     out \u001b[38;5;241m=\u001b[39m check_array(X, input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_params)\n\u001b[0;32m    605\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_y:\n\u001b[0;32m    606\u001b[0m     out \u001b[38;5;241m=\u001b[39m _check_y(y, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_params)\n",
