--- a/HBM stuff/cornerplot-M4data.ipynb
+++ b/HBM stuff/cornerplot-M4data.ipynb
@@ -89,16 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.083 2.192 7.748 3.03  4.332 1.235 2.229 5.227 3.026 4.203 2.271 4.936\n",
-      " 2.016 9.199 1.628 3.448 8.468 5.24  4.528 4.214 8.007 4.884 3.922 4.798\n",
-      " 2.472 2.6   3.55  2.737 5.117 4.649 3.942]\n"
+      "[ 4.616  7.613  2.558  6.056  4.543 11.765  7.449  3.899  5.375  5.279\n",
+      "  7.132  4.385  8.619  2.212 10.021  5.374  2.418  3.48   4.245  5.207\n",
+      "  2.526  3.862  3.938  4.102  6.847  6.873  5.228  6.341  4.029  4.126\n",
+      "  4.811]\n"
      ]
     }
    ],
@@ -113,7 +114,7 @@
     "Deltanu = np.array(df_first_30[\"Deltanu\"])\n",
     "errDeltanu = np.array(df_first_30[\"errDeltanu\"])\n",
     "\n",
-    "print(errL)\n"
+    "print(Deltanu)\n"
    ]
   },
   {
