--- a/HBM stuff/cornerplot-M4data.ipynb
+++ b/HBM stuff/cornerplot-M4data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,7 @@
       "28   W3564  6045465643673557760  245.959422 -26.490526  13.505 -2.008  4803.0   \n",
       "29   W3742  6045489901650196864  245.970856 -26.468500  13.653 -2.157  4720.0   \n",
       "30  W3929*  6045490103497000320  245.985488 -26.424575  13.428 -1.940  5595.0   \n",
+      "31   W4488  6045489351894331776  246.061253 -26.454663  13.509 -2.065  4708.0   \n",
       "\n",
       "         L   errL    numax  errnumax  Deltanu  errDeltanu POPSpec POPCUBI  \n",
       "0   37.865  4.083   38.724     0.965    4.616       0.180      2G      2G  \n",
@@ -73,7 +74,8 @@
       "27  27.020  2.737   59.026     3.100    6.341       0.195     NaN      1G  \n",
       "28  47.534  5.117   31.958     2.938    4.029       0.230      2G      2G  \n",
       "29  42.973  4.649   35.071     1.680    4.126       0.280      1G      1G  \n",
-      "30  41.541  3.942   38.242     1.957    4.811       0.297     NaN     rHB  \n"
+      "30  41.541  3.942   38.242     1.957    4.811       0.297     NaN     rHB  \n",
+      "31  49.304  5.316   27.586     1.425    4.324       0.146     NaN      2G  \n"
      ]
     }
    ],
@@ -82,7 +84,7 @@
     "\n",
     "df = pd.read_csv(r'C:\\Users\\Dell\\Documents\\Y4 Project\\y4project\\HBM stuff\\Files\\tailo2022table.csv')\n",
     "#print(df)  \n",
-    "df_first_30 = df[:31]\n",
+    "df_first_30 = df[:32]\n",
     "print(df_first_30)\n",
     "\n"
    ]
